ref/antlr/common.g4
grammar common;

//============================
// Identifier list
//============================
provider: 'provider';
version: 'version';
fullFieldName: 'fullFieldName';
functionCall: 'functionCall';
alias: 'alias';
number: 'number';
groupByItem: 'groupByItem';
resourceOrSubQuery: 'resourceOrSubQuery';
resource: 'resource';
multipartIdentifier: 'multipartIdentifier';
pattern: 'pattern';
expression: 'expression';
providerMethodName: 'providerMethodName';
parameterName: 'parameterName';
parameterValue: 'parameterValue';
parameterExpression: 'parameterExpression';
queryHint: 'queryHint';
fieldList: 'fieldList';
selectStatement: 'selectStatement';
replaceStatement: 'replaceStatement';
awaitQueryHint: 'awaitQueryHint';
viewName: 'viewName';
fieldValue: 'fieldValue';
//============================
// End Identifier list
//============================

//============================
// Keywords list
//============================
EXEC: 'EXEC';
AUTH: 'AUTH';
LIST: 'LIST';
PULL: 'PULL';
LOGIN: 'LOGIN'; 
INTERACTIVE: 'INTERACTIVE';
REVOKE: 'REVOKE';
DESC: 'DESC';
METHODS: 'METHODS';
DESCRIBE: 'DESCRIBE';
EXPLAIN: 'EXPLAIN';
EXTENDED: 'EXTENDED';
LIMIT: 'LIMIT';
ORDER: 'ORDER';
BY: 'BY';
GROUP: 'GROUP';
WITH: 'WITH';
ROLLUP: 'ROLLUP';
HAVING: 'HAVING';
IN: 'IN';
AS: 'AS';
USE: 'USE';
LIKE: 'LIKE';
FROM: 'FROM';
SHOW: 'SHOW';
WHERE: 'WHERE';
SERVICES: 'SERVICES';
RESOURCES: 'RESOURCES';
PROVIDERS: 'PROVIDERS';
FIELDS: 'FIELDS';
SELECT: 'SELECT';
DISTINCT: 'DISTINCT';
ADD: 'ADD';
ARRAY : 'ARRAY ';
AND: 'AND';
ASC: 'ASC';
AUTO_INCREMENT: 'AUTO_INCREMENT';
BETWEEN: 'BETWEEN';
BINARY: 'BINARY';
CASE: 'CASE';
COLLATE: 'COLLATE';
CONVERT: 'CONVERT';
CREATE: 'CREATE';
CROSS: 'CROSS';
CUME_DIST: 'CUME_DIST';
CURRENT_DATE: 'CURRENT_DATE';
CURRENT_TIME: 'CURRENT_TIME';
CURRENT_TIMESTAMP: 'CURRENT_TIMESTAMP';
SUBSTR: 'SUBSTR';
SUBSTRING: 'SUBSTRING';
DATABASE: 'DATABASE';
DATABASES: 'DATABASES';
DEFAULT: 'DEFAULT';
DELETE: 'DELETE';
DENSE_RANK: 'DENSE_RANK';
DISTINCTROW: 'DISTINCTROW';
DIV: 'DIV';
DROP: 'DROP';
ELSE: 'ELSE';
END: 'END';
ESCAPE: 'ESCAPE';
EXISTS: 'EXISTS';
FALSE: 'FALSE';
FIRST_VALUE: 'FIRST_VALUE';
FOR: 'FOR';
FORCE: 'FORCE';
GROUPING: 'GROUPING';
GROUPS: 'GROUPS';
IF: 'IF';
IGNORE: 'IGNORE';
INDEX: 'INDEX';
INNER: 'INNER';
INSERT: 'INSERT';
INTERVAL: 'INTERVAL';
INTO: 'INTO';
IS: 'IS';
JOIN: 'JOIN';
JSON_TABLE: 'JSON_TABLE';
KEY: 'KEY';
LAG: 'LAG';
LAST_VALUE: 'LAST_VALUE';
LATERAL: 'LATERAL';
LEAD: 'LEAD';
LEFT: 'LEFT';
LOCALTIME: 'LOCALTIME';
LOCALTIMESTAMP: 'LOCALTIMESTAMP';
LOCK: 'LOCK';
MEMBER: 'MEMBER';
MATCH: 'MATCH';
MAXVALUE: 'MAXVALUE';
MOD: 'MOD';
NATURAL: 'NATURAL';
NEXT: 'NEXT';
NOT: 'NOT';
NTH_VALUE: 'NTH_VALUE';
NTILE: 'NTILE';
NULL: 'NULL';
OF: 'OF';
OFF: 'OFF';
ON: 'ON';
OR: 'OR';
OUTER: 'OUTER';
OVER: 'OVER';
PERCENT_RANK: 'PERCENT_RANK';
RANK: 'RANK';
RECURSIVE: 'RECURSIVE';
REGEXP: 'REGEXP';
RENAME: 'RENAME';
REPLACE: 'REPLACE';
REGISTRY: 'REGISTRY';
RIGHT: 'RIGHT';
ROW_NUMBER: 'ROW_NUMBER';
SCHEMA: 'SCHEMA';
SEPARATOR: 'SEPARATOR';
SET: 'SET';
STRAIGHT_JOIN: 'STRAIGHT_JOIN';
SYSTEM: 'SYSTEM';
TABLE: 'TABLE';
THEN: 'THEN';
TIMESTAMPADD: 'TIMESTAMPADD';
TIMESTAMPDIFF: 'TIMESTAMPDIFF';
TO: 'TO';
TRUE: 'TRUE';
UNION: 'UNION';
UNIQUE: 'UNIQUE';
UNLOCK: 'UNLOCK';
UPDATE: 'UPDATE';
USING: 'USING';
UTC_DATE: 'UTC_DATE';
UTC_TIME: 'UTC_TIME';
UTC_TIMESTAMP: 'UTC_TIMESTAMP';
VALUES: 'VALUES';
VERSION: 'VERSION';
VIEW: 'VIEW';
WHEN: 'WHEN';
WINDOW: 'WINDOW';
XOR: 'XOR';
MATERIALIZED: 'MATERIALIZED';
REFRESH: 'REFRESH';
RETURNING: 'RETURNING';
ROWS: 'ROWS';
UNBOUNDED: 'UNBOUNDED';
PRECEDING: 'PRECEDING';
FOLLOWING: 'FOLLOWING';
CURRENT: 'CURRENT';
ROW: 'ROW';
PARTITION: 'PARTITION';
METHOD: 'METHOD';
//============================
// End Keywords list
//============================
